# fhir-moldef

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: README.md
notebooks/schemas/: 01_molecular_definition_overview.ipynb  02_sequence_profile.ipynb  03_allele_profile.ipynb  04_variation_profile.ipynb
notebooks/translations/: 01_simple_allele_creation_and_translation.ipynb  02_vrs_to_fhir_allele_translation.ipynb  03_fhir_to_vrs_allele_translation.ipynb  04_full_allele_roundtrip_translation.ipynb  05_spdi_hgvs_to_fhir_variation.ipynb  06_clinvar_vrs_to_fhir_allele_translation.ipynb
src/builders/: allele_builder.py
src/conventions/: coordinate_systems.py  refseq_identifiers.py
src/exceptions/: api.py  fhir.py  utils.py
src/pipelines/: README.md  clinvar_translate.py
src/profiles/: allele.py  genotype.py  sequence.py  variation.py
src/resources/: __init__.py  fhirtypesextra.py  moleculardefinition.py
src/translators/: fhir_to_vrs_allele.py  minimal_allele.py  representation_translator.py  variation_to_fhir.py  vrs_to_fhir_allele.py
src/translators/constants/: vrs_json_pointers.py
src/translators/validations/: allele.py  indexing.py
src/vrs_tools/: hgvs_tools.py  normalizer.py  translator.py
tests/schemas/: test_allele_profile.py  test_molecular_definition.py  test_sequence_profile.py  test_variation_profile.py
tests/translations/: test_fhir_to_vrs_allele_full.py  test_fhir_to_vrs_allele_minimal.py  test_variation_to_fhir_expression.py  test_vrs_to_fhir_allele_full.py  test_vrs_to_fhir_allele_minimal.py
tests/translations/examples/: allele_test_data.py  vrs_full_example.py
